# BeyondMemorization

./: .gitignore  Dockerfile.txt  Evaluation-API.py  README.md  check_output_qa_pairs.py  commands.sh  count_qa_pairs.py  eval.py  eval_math.py  monthly_qa_pipeline.py  pyproject.toml  read_count_qa_pairs.py  requirements.txt
CLOZEusingAbstracts/: evaluation_claude35sonnet_results.json  evaluation_gpt4omini_scores.json  evaluation_llama31_405b_results.json  evaluation_llama31_405b_scores.json
CLOZEusingAbstracts/CLOZEonRealMathPapers/: evaluation_claude35sonnet_scores.json  evaluation_gpt4omini_results.json  realmath_processed.json
Main Experiments/: datacollate.py  eval.py  monthly_qa_pipeline.py
MainExp/: count_qa_pairs.py
ValidationExp1-CLOZEusingAbstracts/: README.md  evaluateCLOZE.py  extract_filter_raw_abstract.py  generateCLOZE.py  generate_and_evaluate_cloze_abstracts.py  pyproject.toml
ValidationExp1-CLOZEusingAbstracts/CLOZEonPhysMathArXiv/: evaluation_gemini2_flash_results.json  evaluation_gemini2_flash_scores.json  evaluation_llama4_scout_results.json  evaluation_llama4_scout_scores.json  evaluation_o4_mini_results.json  evaluation_o4_mini_scores.json  physmath_abstracts_raw.json  physmath_abstracts_with_cloze.json
ValidationExp1-CLOZEusingAbstracts/CLOZEonRealMathPapers/: realmath_abstracts_with_cloze.json
ValidationExp2-PerturbedLiveCodeBench/: analysis.py  livecodebench-analysis.ipynb  livecodebench.py  readme
analysis/: plot.py
data/math/2025/02/qa_pairs/: dataset_info.json  processed_ids.json  state.json
helpers/: arxiv_retriever.py  extract_latex_text.py  extract_theorems.py  generate_qa.py  prompts.py
helpers/PerturbedLiveCodeBench/: livecodebench-final.ipynb  plotting.py  readme
outputmath202405papers/: data-00000-of-00001.arrow  dataset_info.json  retrieval_log.txt  state.json
