[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beyondmemorization"
version = "0.1.0"
description = "Research project analyzing model memorization vs understanding through theorem-based QA and CLOZE tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML/AI
    "openai>=2.8.0",
    "anthropic>=0.57.1",
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.2",
    "tiktoken>=0.9.0",
    
    # Data Processing & Analysis
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8",
    
    # Visualization
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "matplotlib-venn>=1.1.2",
    "adjustText>=1.3.0",
    "plotly>=5.0.0",
    
    # Document Processing
    "arxiv>=2.2.0",
    "PyMuPDF>=1.26.3",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    
    # Web & HTTP
    "aiohttp>=3.12.13",
    "httpx>=0.28.1",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    
    # Utilities
    "tqdm>=4.67.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "click>=8.2.1",
    "coloredlogs>=15.0.1",
    "PyYAML>=6.0.2",
    
    # Research Tools
    "scholarly>=1.7.11",
    "semanticscholar>=0.10.0",
    "paperscraper>=0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
include = [
    "helpers/**",
    "MainExp/**",
    "ValidationExp1-CLOZEusingAbstracts/**",
    "ValidationExp2-PerturbedLiveCodeBench/**",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.sdist]
include = [
    "helpers/**",
    "MainExp/**",
    "ValidationExp1-CLOZEusingAbstracts/**",
    "ValidationExp2-PerturbedLiveCodeBench/**",
    "README.md",
    "pyproject.toml",
]
